fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 .high-score {
   color: white;
   position: absolute;
-  left: 75%;
+  left: 85%;
   height: 60px;
   font-size: 16px;
 }
